# sar-pipeline

./: .condarc  .gitignore  .pre-commit-config.yaml  README.md  check_gamma_modules.py  config.toml  environment-aws.txt  environment.pixi.yml  environment.yaml  environment.yml  find_scene.py  geocode_GAMMA_s1_ew.py  get_dem_for_scene.py  initialise_gamma.py  parse_orbit_files.py  prepare_configuration.py  pyproject.toml  test_environment.yml  utils.py
.github/workflows/: build-burst-db.yaml  lambda_deployment.yaml  linting.yaml  push-image-to-ecr.yml  run-pytest.yaml  run-pytest.yml
Docker/: Dockerfile
antarctica_sar/nci/preparation/: orbits.py
docs/: README.md
docs/setup/: README.md  aws.md  developer.md  developer_pixi.md  nci.md  user_conda.md
docs/workflows/: README.MD  aws.md  burst-db.md  pyrosar_gamma.md
hooks/: check_pixi_lock.sh  export_conda.sh
nci/preparation/: find_scene.py  orbits.py  scenes.py
sar_antarctica/nci/: cli.py  filesystem.py
sar_antarctica/nci/configs/: EW.toml  default.toml  pyrosar_gamma.toml
sar_antarctica/nci/preparation/: create_config.py  create_dem_vrt.py  dem.py  dem_cop_glo30.py  find_scene.py  geoid.py  orbits.py  scenes.py
sar_antarctica/nci/processing/: GAMMA_utils.py  pyrosar_geocode.py
sar_antarctica/nci/processing/GAMMA/: GAMMA_utils.py
sar_antarctica/nci/processing/pyroSAR/: pyrosar_environment.yml  pyrosar_geocode.py
sar_antarctica/nci/submission/: pbs_template.txt  utils.py
sar_antarctica/nci/submission/pyrosar_gamma/: prepare_input.py  pyrosar_gamma.py  pyrosar_gamma.txt  submit_job.py
sar_antarctica/nci/upload/: push_folder_to_s3.py
sar_antarctica/utils/: raster.py  rio_tools.py  spatial.py
sar_pipeline/: __init__.py
sar_pipeline/ancillary/: etad.py
sar_pipeline/aws/: cli.py
sar_pipeline/aws/configs/ISCE3-RTC/: IW_20m_antarctica.yaml
sar_pipeline/aws/metadata/: filetypes.py  h5.py  stac.md  stac.py
sar_pipeline/aws/metadata/json-schema/: product.json
sar_pipeline/aws/preparation/: STAC.py  burst_utils.py  config.py  dem.py  orbits.py  scenes.py  static_layers.py
sar_pipeline/configs/ISCE3-RTC/: IW_20m_antarctica.yaml  IW_20m_australia.yaml  S1_RTC.yaml  S1_RTC_STATIC.yaml
sar_pipeline/dem/: cop_glo30.py  create_dem_vrt.py  dem.py  download.py  geoid.py
sar_pipeline/dem/utils/: raster.py  rio_tools.py  spatial.py
sar_pipeline/etad/: etad.py
sar_pipeline/nci/: cli.py  filesystem.py
sar_pipeline/nci/configs/: IW.toml
sar_pipeline/nci/preparation/: create_dem_vrt.py  dem.py  dem_cop_glo30.py  geoid.py  orbits.py
sar_pipeline/nci/processing/GAMMA/: GAMMA_utils.py
sar_pipeline/nci/processing/pyroSAR/: pyrosar_geocode.py
sar_pipeline/nci/submission/: pbs_template.txt  utils.py
sar_pipeline/nci/submission/pyrosar_gamma/: prepare_input.py  submit_job.py
sar_pipeline/preparation/: cli.py  etad.py
sar_pipeline/utils/: general.py  post_processing.py  s3upload.py  sentinel1.py  spatial.py
scripts/: make_upload_burst_db.sh  run_aws_pipeline.sh
src/: check_static_layer_exists.py
tests/: dem.py  test_dem.py  test_orbits.py  test_scenes.py
tests/filesystem/: test_filesystem.py
tests/sar_antarctica/: test_dem.py  test_dem_cop_glo30.py  test_dem_vrt.py  test_orbits.py  test_scenes.py
tests/sar_antarctica/data/: cop30m_profile.py
tests/sar_antarctica/data/copernicus_30m_world/: copdem_test.vrt
tests/sar_pipeline/: test_dem.py  test_dem_cop_glo30.py  test_dem_vrt.py  test_orbits.py  test_scenes.py
tests/sar_pipeline/data/: cop30m_profile.py
tests/sar_pipeline/data/copernicus_30m_world/: antimeridian_S80_3031.vrt  antimeridian_S80_4326.vrt  antimeridian_S80_EAST_3031_2396_2130_4_6.tif  antimeridian_S80_EAST_4326.vrt  antimeridian_S80_EAST_4326_2396_2130_4_6.tif  antimeridian_S80_WEST_3031_0_2130_3_6.tif  antimeridian_S80_WEST_4326.vrt  antimeridian_S80_WEST_4326_0_2130_3_6.tif  cop_dem_S71.vrt  cop_dem_S71_1155_2603_171_131.tif  cop_dem_S71_2007_2645_4_5.tif  cop_dem_antimeridian.vrt  cop_dem_ocean_and_land.vrt  cop_dem_ocean_and_land_1797_3597_7_7.tif  cop_dem_ocean_and_land_1_1_4_3.tif
tests/sar_pipeline/data/copernicus_30m_world/Copernicus_DSM_COG_10_S70_00_E161_00_DEM/: Copernicus_DSM_COG_10_S70_00_E161_00_DEM.tif
