[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sar-pipeline"
requires-python = ">=3.8"
authors = [
    {name="Geoscience Australia", email="DigitalEarthAntarctica@ga.gov.au"},
]
description = "Antarctic SAR Backscatter Processing Pipeline"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
version = "0.1" # TODO base this on files in proje t

[project.urls]
Homepage = "https://github.com/GeoscienceAustralia/sar-antarctica.git"
# Documentation = "XXX"

[project.scripts]
find-scene = "sar_pipeline.nci.cli:find_scene_file"
find-orbits = "sar_pipeline.nci.cli:find_orbits_for_scene"
run-pyrosar-gamma-workflow = "sar_pipeline.nci.cli:run_pyrosar_gamma_workflow"
submit-pyrosar-gamma-workflow = "sar_pipeline.nci.cli:submit_pyrosar_gamma_workflow"
upload-files-in-folder-to-s3 = "sar_pipeline.nci.cli:upload_files_in_folder_to_s3"
get-data-for-scene-and-make-run-config = "sar_pipeline.aws.cli:get_data_for_scene_and_make_run_config"

[tool.pytest.ini_options]
testpaths = ["tests/*"]

[tool.setuptools.packages.find]
where = ["."]
